<package>
  <name>hello_world_demo</name>
  <description>
     hello_world_demo
  </description>
  <author>Özgür Sen</author>
  <maintainer email="x@x.de">x</maintainer>
  <license>BSD</license>
  <version>0.1.0</version>
  <url>https://github.com/youbot/youbot_applications</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>youbot_driver</build_depend>
  <run_depend>roscpp</run_depend>

</package>


